sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '(' expected but identifier found.
  while sorted==false{
        ^AlgBubbleSort1:18: error: illegal start of simple expression
} 
^