sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  var sorted=false
  
  while sorted==false{
  
    for (i<-0 to getNombreValeurs()-2){
    
      if (plusPetit(getValeur(i),getValeur(i+1))){
      
        return echange(i,i+1)
      }
    }

  }  

}